<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorGreyLight"
            tools:context=".NewGroceryActivity"
            android:id="@+id/grocery">
            <RelativeLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">
            <EditText
                android:id="@+id/edit_text_add_item"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                android:hint="Enter item"
                android:background="@drawable/layout_border"
                android:layout_marginBottom="5dp"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_text_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_border"
                android:layout_below="@id/edit_text_add_item"
                android:layout_alignParentLeft="true"
                android:hint="Enter Description"
                android:padding="10dp" />
            <!--<Button-->
            <!--android:id="@+id/button_add_item"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:background="@drawable/button_dark_green"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:text="Add item" />-->
            <Button
                android:id="@+id/button_add_item"
                android:layout_height="42dp"
                android:layout_width="42dp"
                android:background="@drawable/add_button"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>


            <!--<include layout="@layout/activity_nav_drawer"/>-->
            <ListView
                android:id="@+id/GroceryListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details"
                android:layout_above="@+id/updateToStock"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_rounded_border"
                android:longClickable="true"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="NotSibling" />

            <Button
                android:id="@+id/updateToStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:layout_above="@+id/tabbar"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_dark_green"
                android:text="Move to Stock"
                />

            <include layout="@layout/tabbar"
                android:id="@+id/tabbar"/>

        </RelativeLayout>
    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/nv">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>


