<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".SignIn"
    android:gravity="center"
    android:padding="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/layout_rounded_border"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        tools:ignore="MissingConstraints">

        <!--Put form controls here-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/lettuce_cook_logo"
            android:layout_marginBottom="50dp"
            android:scaleType="fitStart" />
        <EditText
            android:id="@+id/Email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding = "10dp"
            android:background="@drawable/layout_border"
            android:gravity="center"
            android:hint="Email"
            android:inputType="textEmailAddress"></EditText>

        <EditText
            android:id="@+id/Password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding = "10dp"
            android:background="@drawable/layout_border"
            android:gravity="center"
            android:hint="Password"
            android:inputType="textPassword"></EditText>

        <Button
            android:id="@+id/ButtonSignIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_dark_green"
            android:textColor="@color/colorPrimary"
            android:text="Signin"></Button>

        <TextView
            android:id="@+id/textViewForgotPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Forgot Passsword?"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Don't Have an account? SignUp Here"
            android:textAlignment="center" />
    </LinearLayout>

</android.widget.RelativeLayout>