...
                android:layout_height="wrap_content"
                android:text="SAVED"
                android:background="@null"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/SharedRecipeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="SHARED"
                android:textColor="@color/colorAccentLight"
                android:layout_weight="1"
...
            android:layout_below="@+id/buttons"
            android:layout_marginTop="3dp"
            android:textColor="@color/colorAccentLight"

            />
        <ListView
            android:id="@+id/shared_recipe_list"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/feed"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            tools:layout_editor_absoluteX="0dp"
...
