<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/layout_border"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/buttonGrocery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="1"
            android:text="Grocery" />
        <Button
            android:id="@+id/buttonStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="1"
            android:text="Stock" />

        <Button
            android:id="@+id/buttonRecipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="1"
            android:text="Recipes" />

        <Button
            android:id="@+id/buttonFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="1"
            android:text="Friends" />

        <Button
            android:id="@+id/buttonMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="Maps" />
    </LinearLayout>

</FrameLayout>